src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MSLP</fullName>
                </value>
                <value>
                    <fullName>BlueWave Solar Loan</fullName>
                </value>
                <value>
                    <fullName>SMART - Community Solar</fullName>
                </value>
                <value>
                    <fullName>SREC - Community Solar</fullName>
                </value>
                <value>
                    <fullName>CED Ensemble</fullName>
                </value>
                <value>
                    <fullName>VDER - Community Solar</fullName>
                </value>
                <value>
                    <fullName>Net Energy Billing (NEB)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Specific_Conga_Template__c</fullName>
        <inlineHelpText>This is the conga template for project specific contracts generated off of the contract object in SSF.</inlineHelpText>
        <label>Project Specific Conga Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Specific_Template_Countersigned__c</fullName>
        <inlineHelpText>Conga template ID for the countersigned version of project specific contracts.</inlineHelpText>
        <label>Project Specific Template (Countersigned</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Junctions_to_Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this will require Partner Product Junctions before the product appears as an option for Installers in the Solar Loan Portal</inlineHelpText>
        <label>Require Junctions to Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SREC_Fee_Fixed_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SREC Fee Fixed Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SREC_Fee_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SREC Fee Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sizing_Method__c</fullName>
        <label>Sizing Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project Ratio</fullName>
                </value>
                <value>
                    <fullName>Rate Class Ratio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_Electricity_Rate__c</fullName>
        <label>Solar Electricity Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stamp_Tax__c</fullName>
        <label>Stamp Tax</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Incentive_Second_Reamort__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Incentive Second Reamort</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Tax_Incentive_Cap__c</fullName>
        <inlineHelpText>See State Tax Inventive (%)</inlineHelpText>
        <label>State Tax Incentive Cap</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Tax_Incentive__c</fullName>
        <inlineHelpText>Used on Quick Sales Sheet: State Tax Incentive % of System Cost, see State Tax Incentive Cap as well.</inlineHelpText>
        <label>State Tax Incentive</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Platform_Fee__c</fullName>
        <label>Technology Platform Fee</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TermPlusIO__c</fullName>
        <inlineHelpText>Populated manually, to reduce compiled formula size in the Maturity Date formula.</inlineHelpText>
        <label>Term Plus IO</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Length_Rate__c</fullName>
        <formula>TEXT(TermPlusIO__c/12) + &quot; yrs - &quot;+ TEXT(Loan_Interest_Rate__c * 100) + &quot;%&quot;</formula>
        <label>Term in Years - Initial Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_in_Years__c</fullName>
        <label>Term in Years</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ten (10)</fullName>
                </value>
                <value>
                    <fullName>Eleven (11)</fullName>
                </value>
                <value>
                    <fullName>Twelve (12)</fullName>
                </value>
                <value>
                    <fullName>Thirteen (13)</fullName>
                </value>
                <value>
                    <fullName>Fifteen (15)</fullName>
                </value>
                <value>
                    <fullName>Sixteen (16)</fullName>
                </value>
                <value>
                    <fullName>Twenty(20)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utility_Account_Subscription_Type__c</fullName>
        <inlineHelpText>Determines whether a utility account will be able to be subscribed to more than one system. Most NY utility accounts are only allowed to be subscribed to a single system.</inlineHelpText>
        <label>Utility Account Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multiple subscriptions per Utility Account</fullName>
                    <default>true</default>
                    <label>Multiple subscriptions per Utility Account</label>
                </value>
                <value>
                    <fullName>Single subscription per Utility Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X25_BPS_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>25 BPS Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4_month_sizing_method__c</fullName>
        <description>Used in UDR trigger to select which value to use in Annual kWh calculation</description>
        <inlineHelpText>Used in UDR trigger to select which value to use in Annual kWh calculation</inlineHelpText>
        <label>&gt;4 month sizing method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>State Average Annual Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Adjustable_Rate_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Docusign_Template_CoSigner__c</columns>
        <columns>Contract_Docusign_Template__c</columns>
        <columns>Docusign_Template_Joint__c</columns>
        <columns>State__c</columns>
        <columns>Hide_in_Requested_Product__c</columns>
        <columns>Require_Junctions_to_Enable__c</columns>
        <columns>Credit_Maximum__c</columns>
        <columns>Credit_Minimum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Months_in_Set_Rate_Period__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Adjustable Rate Products</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Lender_of_Record__c</columns>
        <columns>Maximum_Loan_Size__c</columns>
        <columns>State__c</columns>
        <columns>Loan_Interest_Rate__c</columns>
        <columns>Docusign_Template_CoSigner__c</columns>
        <columns>Contract_Docusign_Template__c</columns>
        <columns>Docusign_Template_Joint__c</columns>
        <columns>Loan_Term__c</columns>
        <columns>Credit_Minimum__c</columns>
        <columns>Credit_Maximum__c</columns>
        <columns>Debt_To_Income_Maximum__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>Index_Rate_for_Adjustment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Community Solar</value>
        </filters>
        <label>CS Active Products</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>NMC_Discount__c</columns>
        <columns>NM_Rate_Floor__c</columns>
        <columns>Monthly_Late_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CREATED_DATE</field>
            <operation>equals</operation>
            <value>7/6/2018 12:00 AM</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>InactiveProducts</fullName>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Lender_of_Record__c</columns>
        <columns>State__c</columns>
        <columns>Loan_Interest_Rate__c</columns>
        <columns>Loan_Term__c</columns>
        <columns>Loan_Interest_Only_Period__c</columns>
        <columns>Loan_Financing_Fee_Terms__c</columns>
        <columns>Credit_Minimum__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Products</label>
    </listViews>
    <listViews>
        <fullName>MSLP</fullName>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Credit_Minimum__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>MSLP</value>
        </filters>
        <label>MSLP</label>
    </listViews>
    <recordTypes>
        <fullName>Client_BD</fullName>
        <active>true</active>
        <label>Client BD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Lock_Product</fullName>
        <active>false</active>
        <description>Prevents making any changes to existing Product records</description>
        <errorConditionFormula>AND(AND(NOT(ISNEW()), NOT(ISCLONE())),
    OR(ISCHANGED(Loan_Interest_Rate__c ),
       ISCHANGED(Loan_Term__c),
       ISCHANGED(Loan_Interest_Only_Period__c), 
       ISCHANGED(Disbursal_Terms__c), 
       ISCHANGED(Family),ISCHANGED(Product_Type__c),
       ISCHANGED(State__c),
       ISCHANGED(Program__c)))</errorConditionFormula>
        <errorMessage>Product records cannot be edited! Please clone this records to make updates.</errorMessage>
    </validationRules>
</CustomObject>